# General-Exercises

./: .gitignore  Casting.cpp  README.md  dialogue.cpp  isPalindrome.cpp  workWithNumbers.cpp
C++/MiniMax_Algo/: minimax  mytry_minimax  mytry_minimax.cpp  working_minimax.cpp
C++/OOP/: ConstructorExample.cpp
C++/Pointers/: Products_Manager.cpp  productsManager.cpp
C++/Reference/: Example1.cpp  copy.cpp  incrementValue.cpp  modifyString.cpp  passAnObject.cpp  swapValues.cpp
C++/Virtual Functions/: Shape_Hierarchy.cpp
C/BubbleSort_Comp/BubbleSort_vs_BubbleSort/: bubbleSort1.c  bubbleSort2.c
C/BubbleSort_Comp/BubbleSort_vs_QuickSort/: quicksort.c
Classes/: general.cpp
Introduction/: Constants.cpp  Types.cpp  Variables.cpp
Projects/StudentManager/: CMakeLists.txt  main.cpp  student.h
